demo.hello/k8s/ingress/deploy/k8s-ingress-controller.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: k8s-simple-ingress-controller
  namespace: k8s-test
  labels:
    app: ingress-controller
spec:
  selector:
    matchLabels:
      app: ingress-controller
  template:
    metadata:
      labels:
        app: ingress-controller
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: k8s-simple-ingress-controller
      containers:
      - name: k8s-simple-ingress-controller
        image: zhengjin/k8s-simple-ingress-controller:v0.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
